microblog actually does stuff now

--- a/microblog/lib/microblog_web/templates/layout/app.html.eex
+++ b/microblog/lib/microblog_web/templates/layout/app.html.eex
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- credit to Nat Tuck for the starter template for this page -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,29 +8,62 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Microblog!</title>
+    <title>BadTwitter</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
+   <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+      <%= link "BadTwitter", to: post_path(@conn, :index), class: "navbar-brand" %>
+
+      <button class="navbar-toggler" type="button"
+              data-toggle="collapse" data-target="#main-navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="main-navbar">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <%= link "Posts", to: post_path(@conn, :index), class: "nav-link" %>
+          </li>
+        </ul>
+      </div>
+
+      <%= if @current_user do %>
+        <span class="text-light">
+          <%= @current_user.email %> |
+          <%= link("logout", to: session_path(@conn, :logout), method: :delete) %>
+        </span>
+      <% else %>
+        <%= form_for @conn, session_path(@conn, :login), 
+              [as: "user", class: "form-inline"], fn f -> %>
+          <input type="text" placeholder="email" class="form-control" name="email">
+          <input type="submit" value="Sign in" class="btn btn-primary">
+        <% end %>
+      <% end %>
+   </nav>
+
     <div class="container">
-      <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header>
 
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <div class="row">
+        <div class="col-sm-12 my-2">
+          <%= if get_flash(@conn, :info) do %> 
+            <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+          <% end %>
+          <%= if get_flash(@conn, :error) do %> 
+            <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+          <% end %>
+        </div>
+      </div>
 
-      <main role="main">
-        <%= render @view_module, @view_template, assigns %>
-      </main>
+      <div class="row">
+        <div class="col-sm-12">
+          <%= render @view_module, @view_template, assigns %>
+        </div>
+      </div>
 
-    </div> <!-- /container -->
+    </div> <!-- container -->
+  
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
