--- a/microblog/lib/microblog_web/templates/post/index.html.eex
+++ b/microblog/lib/microblog_web/templates/post/index.html.eex
@@ -3,17 +3,14 @@
 
 
 <%= if @current_user do %>
-  <span><%= link "Create a new post", to: post_path(@conn, :new), class: "btn btn-primary mb-3" %></span>
+  <span><%= link "Create a new post", to: post_path(@conn, :new), id: "likeButton",  class: "btn btn-primary mb-3" %></span>
 <% end %>
 
-<table class="table">
+<table class="table" id="postsTable">
   <thead>
     <tr>
       <th>User</th>
       <th>Message</th>
-      <th>Favs</th>
-      <th>Last Updated</th>
-      <th>Created</th>
     </tr>
   </thead>
   <tbody>
@@ -21,16 +18,9 @@
     <tr>
       <td><%= link post.user.email, to: user_path(@conn, :show, post.user) %></td>
       <td><%= post.message %></td>
-      <td><%= post.favs %></td>
-      <td><%= Date.to_string(post.updated_at) %></td>
-      <td><%= Date.to_string(post.inserted_at) %></td>
 
-      <td class="text-right">
+      <td>
         <span><%= link "Show", to: post_path(@conn, :show, post), class: "btn btn-default btn-xs" %></span>
-        <%= if @current_user && @current_user.id == post.user.id do %>
-          <span><%= link "Edit", to: post_path(@conn, :edit, post), class: "btn btn-default btn-xs" %></span>
-          <span><%= link "Delete", to: post_path(@conn, :delete, post), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
-        <% end %>
       </td>
     </tr>
 <% end %>
