--- a/microblog/lib/microblog_web/templates/post/form.html.eex
+++ b/microblog/lib/microblog_web/templates/post/form.html.eex
@@ -6,12 +6,11 @@
   <% end %>
 
   <div class="form-group">
-    <%= label f, :message, class: "control-label" %>
     <%= textarea f, :message, class: "form-control" %>
     <%= error_tag f, :message %>
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Create a New Post", class: "btn btn-primary" %>
   </div>
 <% end %>
