--- a/microblog/lib/microblog_web/templates/user/form.html.eex
+++ b/microblog/lib/microblog_web/templates/user/form.html.eex
@@ -11,6 +11,19 @@
     <%= error_tag f, :email %>
   </div>
 
+  <!-- users/form.eex -->
+  <div class="form-group">
+    <%= label f, :password, class: "control-label" %>
+    <%= password_input f, :password, class: "form-control" %>
+    <%= error_tag f, :password %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :password_confirmation, class: "control-label" %>
+    <%= password_input f, :password_confirmation, class: "form-control" %>
+    <%= error_tag f, :password_confirmation %>
+  </div>
+
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
   </div>
